Add series detection, multiple mount points, and various improvements
Features:
- Series Detection page: Auto-detect podcast/radio show series and batch-apply album tags
- Multiple mount points: Support scanning multiple music directories
- DuckDuckGo search integration for tracklist matching
- Cover art extraction from audio files
- Expanded metadata fields (genre, year, BPM, key, label)
- series_tagged flag to prevent already-tagged tracks from reappearing

Fixes:
- Fixed database locking during tag writes
- Improved series grouping (month name handling, fuzzy matching)
- Fixed React key conflicts for duplicate series names
- Fixed apply button state tracking per series card

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,13 +8,13 @@ services:
     container_name: dj-set-tagger-dev
     ports:
       - "8080:8080"    # Web UI
-      - "5000:5000"    # API
+      - "5001:5000"    # API (mapped to 5001 on host)
     volumes:
       - ./config:/config
-      - ./test-music:/music  # Local test music folder
+      - /Volumes/Media/Music:/music  # SMB share from 10.0.30.159
+      - /Volumes/Media/radio:/radio  # Radio recordings mount
       - ./backend:/app/backend  # Hot reload for backend
     environment:
       - MUSIC_DIR=/music
       - CONFIG_DIR=/config
-      - SCAN_EXTENSIONS=mp3,flac,wav,m4a,aac,ogg
       - TZ=America/New_York
