--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,8 @@ beautifulsoup4>=4.12.0
 requests>=2.31.0
 fake-headers>=1.0.2
 lxml>=4.9.0
+cloudscraper>=1.2.71
+playwright>=1.40.0
 
 # Fuzzy matching
 rapidfuzz>=3.5.0
