Rename app from DJ Set Tagger to SetList
- Updated all branding, container names, and references
- New description: Organize and tag your music library - DJ sets, podcasts, radio shows, and albums
- Reflects expanded functionality beyond just DJ sets
- Updated unraid template to setlist.xml

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  dj-set-tagger:
+  setlist:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: dj-set-tagger-dev
+    container_name: setlist-dev
     ports:
       - "8080:8080"    # Web UI
       - "5001:5000"    # API (mapped to 5001 on host)
