--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dj-set-tagger-frontend",
+  "name": "setlist-frontend",
   "version": "0.7.0-alpha",
   "private": true,
   "type": "module",
