--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  dj-set-tagger:
+  setlist:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: dj-set-tagger
+    container_name: setlist
     restart: unless-stopped
     ports:
       - "8080:8080"    # Web UI
